@@ -82,7 +82,7 @@ public:
 	/*
 	 * cfg: a weapon special WML structure
 	 */
-	bool special_active(const config& cfg,bool self,bool report=false) const;
+	bool special_active(const config& cfg, bool self) const;
 	bool special_affects_opponent(const config& cfg) const;
 	bool special_affects_self(const config& cfg) const;
 
